# gpudrive

./: .dockerignore  .env  .env.template  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  0001-Narrowphase.patch  0001-RigidBodyPhysicsSystem.patch  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ad  benchmark_results.csv  build.py  build_gpudrive.py  compile.sh  config.py  config.yaml  config.yml  conftest.py  enable_as.sh  environment.yml  global_steps.npy  gpudrive_vbd_sample_11671609ebfa3185.pkl  gpudrive_vbd_sample_2bd577a009790706.pkl  gpudrive_vbd_sample_6d2a107f2e8390a.pkl  gpudrive_vbd_sample_ab2a72c63f8fd589.pkl  index.ipynb  kian_test.py  output.json  perc_collisions.npy  perc_goal_achieved.npy  perc_offroad.npy  pyproject.toml  pytest.ini  requirements.txt  run.sh  (+12 more)
GPUDriveEnv/: pyvenv.cfg
baselines/: README.md  config.py  imitation_data_generation.py  run_ppo_sb3.py  run_rl_sim_bench.py
carla/: test.ipynb  tmp.py
checkpoints/: model_guidance_log_replay__S_100__04_29_19_49_30_053_015179.pt  model_guidance_log_replay__S_1__04_26_09_02_20_677_000833.pt  model_guidance_log_replay__S_3__04_27_13_13_33_780_013762.pt  model_guidance_logs__S_100__05_08_08_32_27_313_000750.pt  model_guidance_progress__S_100__05_06_20_02_22_663_001500.pt  model_guidance_progress__S_1__05_04_17_37_18_741_001677.pt  model_guidance_progress__S_1__05_05_20_39_28_830_007338.pt  model_waypoint_rs__S_100__04_22_19_50_09_856_002083.pt  model_waypoint_rs__S_1__04_23_19_37_26_618_003500.pt  model_waypoint_rs__S_1__04_24_19_08_49_096_000850.pt
data_10/: tfrecord-00001-of-01000_307.json  tfrecord-00001-of-01000_49.json  tfrecord-00003-of-01000_109.json  tfrecord-00004-of-01000_157.json  tfrecord-00004-of-01000_378.json  tfrecord-00004-of-01000_61.json  tfrecord-00005-of-01000_423.json  tfrecord-00007-of-01000_237.json  tfrecord-00012-of-01000_246.json  tfrecord-00012-of-01000_389.json
data_utils/: README.md  common.py  datatypes.py  detect_3d.ipynb  detect_behavior.py  detect_parked.py  extract_groups.py  filter_3d.py  filter_dataset.py  post_processing.py  process_waymo_files.py  vbd_data.py  vbd_scenario_processing.py  viz_collisions.ipynb  waymo_to_scenario_demo.ipynb  wosac_dataset.py
docs/: project_structure.md
env/: base_environment.py  pygame_test.py  run_ppo_sb3.py  sb3_wrapper.py
example_data/: tfrecord-00012-of-01000_389.json  valid_files.json
examples/: pygame_render_test.py  sim_demo.ipynb  speed_benchmark.py
experiments/: observation_figures.ipynb  run_ppo_sb3.py  run_rl_sim_bench.py
gpudrive/: __init__.py  pyvenv.cfg
hpc/: Dockerfile  README.md  launch.sh
maps.50/: tfrecord-00060-of-01000_450.json  tfrecord-00061-of-01000_150.json  tfrecord-00061-of-01000_223.json  tfrecord-00062-of-01000_391.json  tfrecord-00063-of-01000_230.json  tfrecord-00063-of-01000_75.json  tfrecord-00065-of-01000_115.json  tfrecord-00066-of-01000_343.json  tfrecord-00068-of-01000_277.json  tfrecord-00069-of-01000_123.json  tfrecord-00069-of-01000_193.json  tfrecord-00070-of-01000_158.json  tfrecord-00070-of-01000_251.json  tfrecord-00072-of-01000_20.json  tfrecord-00072-of-01000_212.json  tfrecord-00072-of-01000_261.json  tfrecord-00072-of-01000_379.json  tfrecord-00073-of-01000_155.json  tfrecord-00073-of-01000_173.json  tfrecord-00073-of-01000_71.json  tfrecord-00075-of-01000_392.json  tfrecord-00077-of-01000_81.json  tfrecord-00079-of-01000_207.json  tfrecord-00080-of-01000_219.json  tfrecord-00080-of-01000_386.json  tfrecord-00081-of-01000_140.json  tfrecord-00082-of-01000_434.json  tfrecord-00082-of-01000_465.json  tfrecord-00083-of-01000_389.json  tfrecord-00083-of-01000_451.json  tfrecord-00083-of-01000_455.json  tfrecord-00085-of-01000_265.json  tfrecord-00086-of-01000_238.json  tfrecord-00087-of-01000_252.json  tfrecord-00087-of-01000_31.json  tfrecord-00091-of-01000_139.json  tfrecord-00092-of-01000_233.json  tfrecord-00094-of-01000_245.json  tfrecord-00095-of-01000_204.json  tfrecord-00097-of-01000_266.json  (+11 more)
models/: bc_policy.pt
my_tests/: 400_config.yaml  400_policy.py  alphas.py  conditioned_agent.yaml  daphne_rc.py  huggging_face.py  model_PPO____S_75__05_21_11_20_13_859_004800.pt  rew_conditioned_0321.pt
networks/: basic_ffn.py  late_fusion.py  perm_eq_late_fusion.py
nocturne_data/: example.json
notebooks/: 00_align_simulators_vbd.ipynb  01_feature_dists_vbd.ipynb  01_features_deepdive.ipynb  align_simulators_vbd.ipynb  align_waymax_gpudrive.ipynb  baseline_figs.ipynb  expert_actions.pt  find_common_scenarios_by_id.ipynb  gpudrive_vbd_sample_11671609ebfa3185.pkl  inspect_expert_actions.ipynb  jax_playground.ipynb  vbd_debug.py  waymax_vbd_sample_11671609ebfa3185.pkl
profiling/: profile_gpudrive.py  profile_madrona_gpudrive.py
pygpudrive/: __init__.py
quantizedMapPOC/: Quantizer.py  test.py
sb3/: callbacks.py  config.yaml  gpudrive_gym_env.py  logger.py  run_ppo_single_agent.py  sb3_runner.py  sb3_wrapper.py  wrappers.py
scripts/: __init__.py  benchmark.py  c_gae.c  c_gae.pyx  cleanrl.py  cleanrl_old.py  compile_gae.py  cpu_benchmark.py  cpu_interactive.py  dataset_binning.py  gpudrive_gym.py  gpudrive_gym_cleanrl.py  gpudrive_gymnasium.py  infer.py  interactive.py  parse_device_tracing.py  parse_tracing.py  policies.py  (+9 more)
src/: CMakeLists.txt  MapReader.cpp  MapReader.hpp  binary_heap.hpp  bindings.cpp  consts.hpp  dynamics.hpp  dynamics_delta.hpp  geo_gen.cpp  geo_gen.hpp  geo_gen.inl  headless.cpp  init.cpp  init.hpp  json_serialization.hpp  knn.hpp  level_gen.cpp  level_gen.hpp  mgr.cpp  mgr.hpp  obb.hpp  rasterizer.hpp  rng.hpp  sim.cpp  sim.hpp  sim.inl  types.hpp  utils.hpp  viewer.cpp
tests/: CMakeLists.txt  CollisionDetectionTests.cpp  EgocentricRoadObservationTests.cpp  agent-agent-collision.json  agent-road-edge-collision.json  bicyclemodel.cpp  interactive.py  observationTest.cpp  test.json  test_delta_model.py  test_expert.py  test_gpudrive.py  test_json_parsing_changes.py  test_orig.json  test_utils.cpp  test_utils.hpp  test_waymax_model.py  valid_files.json
tests/CoDec/: test1.py
tests/pytest_data/: test.json
(+615 files in other folders)
