[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
]
build-backend = "madrona-py-build"
backend-path = ["external/madrona/py"]
wheel-directory = "build"

[project]
name = "madrona_gpudrive"
version = "0.3.0"
authors = [
    {name = "Saman Kazemkheni", email = "skazemkhani@gmail.com"},
    {name = "Aarav Pandya", email = "pandya.aarav.97@gmail.com"},
    {name = "Daphne Cornelisse", email = "cor.daphne@gmail.com"},
    {name = "Eugene Vinitsky", email ="vinitsky.eugene@gmail.com"},
]
readme = "README.md"
description = "A GPU-accelerated, multi-agent driving simulator"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4"
]

[project.optional-dependencies]
torch = [
    "torch>=2.2.1",
]
test = [
    "pytest>=8.2.1",
]

[tool.madrona.packages.madrona_gpudrive]
ext-only = true
ext-out-dir = "build"

#[tool.madrona.packages.gpudrive]
#path = "gpudrive"
